# jupyterlab_openseadragon

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
src/: index.ts
src/__tests__/: jupyterlab_openseadragon.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlab_openseadragon.spec.ts
